--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,87 @@
-.App {
-  text-align: center;
+h1, p {
+  font-family: Lato;
+}
+.app{
+  text-align:center;
+  max-width:350px;
+  margin:auto;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  padding:10px 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.app .header h1{
+  display:flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+.app .header img{
+  margin-right:15px;
+}
+.app h5{
+  text-align:left;
+  box-shadow: 2px 3px 13px rgba(0,0,0,.2);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding:10px 10px;
+  transition:all .2s ease;
+}
+.app h5:hover{
+ border-left: 9px solid #028130;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app h5:hover .x-delete{
+  opacity:1;
 }
+
+.x-delete{
+  opacity:0;
+  transition:all .4s ease;
+  background:#c00c1c;
+  border-radius:25px;
+  color:#fff;
+  padding:5px 10px;
+  cursor:pointer;
+}
+
+.todo{
+  border-left: 5px solid #028130;
+}
+
+.form{
+  display:flex;
+  justify-content: space-between;
+}
+.form input{
+  width:70%;
+  padding:10px;
+  border:1px solid #d4d4d4;
+  outline:none;
+}
+.form button{
+  padding:10px;
+  border:1px solid #d4d4d4;
+  box-shadow:2px 3px 13px rgba(0,0,0,0.1);
+  background:#fff;
+  outline:none;
+  transition:all .4s ease;
+  cursor: pointer;
+}
+.form button:hover{
+  background:#016ab4;
+  color:#fff;
+}
+
+.btn-orderTodos{
+  margin-top:10px;
+  width:100%;
+  padding:10px;
+  border:1px solid #d4d4d4;
+  box-shadow:2px 3px 13px rgba(0,0,0,0.1);
+  background:#eeefef;
+  outline:none;
+  transition:all .4s ease;
+  cursor: pointer;
+}
+
